Add JWT auth, pagination and voting to IdeaBox

--- a/src/IdeaBox.Api/appsettings.json
+++ b/src/IdeaBox.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
  "ConnectionStrings": {
   "DefaultConnection": "Data Source=ideabox.db"
+},
+"Jwt": {
+  "Issuer": "IdeaBox",
+  "Audience": "IdeaBox",
+  "Key": "super-secret-key-change-this-please-123456"
 }
 }
